@@ -39,6 +39,8 @@
     - Seperated dist_core() into dist, tardist, uutardist, tarfile,
       zipdist, zipfile and shdist_target methods.  Allows elimination
       of redundant code in MM_VMS.
+    - Replaced WARN_IF_OLD_PACKLIST, DOC_INSTALL and UNINSTALL
+      one-liners with ExtUtils::Command::MM functions
 
 6.05 Tue Aug 27 16:09:51 PDT 2002
     - Output format of the hint file verbose diagnostic is now in
